RDITZ-2 Updating HTTP port number, and build configuration

--- a/dashboard-api/src/main/resources/application.properties
+++ b/dashboard-api/src/main/resources/application.properties
@@ -30,7 +30,7 @@ spring.jpa.hibernate.bytecode.provider=javassist
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 
-ui.path=
+ui.path=/home/sdimunzio/projects/tz-health-dashboard/dashboard-ui/build/
 spring.http.multipart.max-file-size=10MB
 spring.http.multipart.max-request-size=10MB
 
