--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,6 @@
 
 
     <dependencies>
-        <!-- Compile -->
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -174,6 +173,28 @@
             <artifactId>commons-io</artifactId>
             <version>2.6</version>
         </dependency>
+
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-logging</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-log4j2</artifactId>
+        </dependency>
+
+
     </dependencies>
 
     <build>
