--- a/dashboard-ui/package.json
+++ b/dashboard-ui/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "css-loader": "^0.28.11",
+    "d3": "^5.3.0",
     "history": "^4.7.2",
     "immutable": "^3.8.2",
+    "node-sass-chokidar": "^1.2.2",
     "react": "^16.3.2",
     "react-async-component": "^2.0.0",
     "react-dom": "^16.3.2",
@@ -14,12 +17,21 @@
     "react-scripts": "0.9.5",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.2",
-    "redux-thunk": "^2.2.0"
+    "redux-immutable": "^4.0.0",
+    "redux-thunk": "^2.2.0",
+    "style-loader": "^0.21.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "node-sass": "^4.9.0",
+    "sass-loader": "^7.0.1"
+  },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build-css": "node-sass-chokidar src/ -o src/",
+    "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
+    "start-js": "react-scripts start",
+    "start": "npm-run-all -p watch-css start-js",
+    "build-js": "react-scripts build",
+    "build": "npm-run-all build-css build-js",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
