--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>1.5.8.RELEASE</version>
+
+
     </parent>
 
     <properties>
@@ -28,6 +30,7 @@
 
     <modules>
             <module>dashboard-api</module>
+            <module>geo-utils</module>
     </modules>
 
 
@@ -38,10 +41,6 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
