--- a/dashboard-ui/package.json
+++ b/dashboard-ui/package.json
@@ -19,6 +19,7 @@
     "redux-devtools-extension": "^2.13.2",
     "redux-immutable": "^4.0.0",
     "redux-thunk": "^2.2.0",
+    "run-all": "^1.0.1",
     "style-loader": "^0.21.0"
   },
   "devDependencies": {
