--- a/dashboard-ui/package.json
+++ b/dashboard-ui/package.json
@@ -8,6 +8,7 @@
     "history": "^4.7.2",
     "immutable": "^3.8.2",
     "node-sass-chokidar": "^1.2.2",
+    "npm-run-all": "^4.1.3",
     "react": "^16.3.2",
     "react-async-component": "^2.0.0",
     "react-dom": "^16.3.2",
@@ -19,7 +20,6 @@
     "redux-devtools-extension": "^2.13.2",
     "redux-immutable": "^4.0.0",
     "redux-thunk": "^2.2.0",
-    "run-all": "^1.0.1",
     "style-loader": "^0.21.0"
   },
   "devDependencies": {
