Dhis2 Client and some initial data import task implementation

--- a/dashboard-api/pom.xml
+++ b/dashboard-api/pom.xml
@@ -21,6 +21,28 @@
             <artifactId>geo-utils</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+
+
+        <dependency>
+            <groupId>org.hisp</groupId>
+            <artifactId>dhis2-java-client</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+
+
+
+
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.5</version>
+        </dependency>
+        <dependency>
+            <groupId>de.grundid.opendatalab</groupId>
+            <artifactId>geojson-jackson</artifactId>
+            <version>1.8</version>
+        </dependency>
+
     </dependencies>
     <build>
         <resources>
@@ -86,7 +108,12 @@
             </plugin>
         </plugins>
     </build>
-
-
+    <repositories>
+        <repository>
+            <id>boundlessgeo</id>
+            <name>boundlessgeo</name>
+            <url>http://repo.boundlessgeo.com/main/</url>
+        </repository>
+    </repositories>
 
 </project>
