--- a/dashboard-api/src/main/resources/application.properties
+++ b/dashboard-api/src/main/resources/application.properties
@@ -27,8 +27,8 @@ spring.jpa.hibernate.jdbc.batch_versioned_data=true
 spring.jpa.hibernate.bytecode.use_reflection_optimizer=true
 spring.jpa.hibernate.bytecode.provider=javassist
 
-spring.jpa.generate-ddl=true
-spring.jpa.show-sql=true
+spring.jpa.generate-ddl=false
+spring.jpa.show-sql=false
 
 ui.path=/home/sdimunzio/projects/tz-health-dashboard/dashboard-ui/build/
 spring.http.multipart.max-file-size=10MB
@@ -40,3 +40,4 @@ logging.file=tanzania.log
 server.compression.enabled=true
 server.compression.min-response-size=2048
 server.compression.mime-types=application/json,application/xml,text/html,text/xml,text/plain
+
