--- a/dashboard-api/src/main/resources/application.properties
+++ b/dashboard-api/src/main/resources/application.properties
@@ -11,9 +11,12 @@ spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.database-platform=org.devgateway.dialect.Dialect
 
 spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.properties.hibernate.cache.use_second_level_cache=true
+spring.jpa.properties.hibernate.cache.use_query_cache=true
 spring.jpa.properties.hibernate.cache.region.factory_class=org.hibernate.cache.ehcache.SingletonEhCacheRegionFactory
-hibernate.cache.use_second_level_cache=true
-hibernate.cache.use_query_cache=true
+
+
 spring.datasource.max-active=3000
 spring.datasource.max-idle=8
 spring.datasource.min-idle=8
@@ -40,4 +43,5 @@ logging.file=tanzania.log
 server.compression.enabled=true
 server.compression.min-response-size=2048
 server.compression.mime-types=application/json,application/xml,text/html,text/xml,text/plain
+
 
