--- a/dashboard-ui/package.json
+++ b/dashboard-ui/package.json
@@ -7,12 +7,15 @@
     "d3": "^5.3.0",
     "d3-tile": "0.0.4",
     "history": "^4.7.2",
+    "i18next": "^11.6.0",
+    "i18next-browser-languagedetector": "^2.2.3",
     "immutable": "^3.8.2",
     "node-sass-chokidar": "^1.2.2",
     "npm-run-all": "^4.1.3",
     "react": "^16.3.2",
     "react-async-component": "^2.0.0",
     "react-dom": "^16.3.2",
+    "react-i18next": "^7.11.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
