Adding nested routes and global state

--- a/dashboard-api/pom.xml
+++ b/dashboard-api/pom.xml
@@ -75,6 +75,17 @@
                     <include>**/*.xsd</include>
                 </includes>
             </resource>
+
+            <resource>
+                <filtering>true</filtering>
+                <directory>src/test/resources</directory>
+                <includes>
+                    <include>**/*.properties</include>
+                    <include>**/*.sql</include>
+                    <include>**/*.xml</include>
+                    <include>**/*.xsd</include>
+                </includes>
+            </resource>
         </resources>
         <plugins>
             <plugin>
