Facility query filters  and RMNCH import

--- a/dashboard-api/src/main/resources/application.properties
+++ b/dashboard-api/src/main/resources/application.properties
@@ -30,7 +30,7 @@ spring.jpa.hibernate.jdbc.batch_versioned_data=true
 spring.jpa.hibernate.bytecode.use_reflection_optimizer=true
 spring.jpa.hibernate.bytecode.provider=javassist
 
-spring.jpa.generate-ddl=false
+spring.jpa.generate-ddl=true
 spring.jpa.show-sql=false
 
 ui.path=/home/sdimunzio/projects/tz-health-dashboard/dashboard-ui/build/
