--- a/dashboard-api/src/test/resources/staging.properties
+++ b/dashboard-api/src/test/resources/staging.properties
@@ -28,7 +28,7 @@ spring.jpa.hibernate.bytecode.use_reflection_optimizer=true
 spring.jpa.hibernate.bytecode.provider=javassist
 
 spring.jpa.generate-ddl=true
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 
 ui.path=/opt/tz-health-dashboard/ui/
 spring.http.multipart.max-file-size=10MB
