--- a/dashboard-api/pom.xml
+++ b/dashboard-api/pom.xml
@@ -51,7 +51,11 @@
             <artifactId>opencsv</artifactId>
             <version>4.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>1.4</version>
+        </dependency>
     </dependencies>
     <build>
         <resources>
