--- a/dashboard-ui/package.json
+++ b/dashboard-ui/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "autosuggest-highlight": "^3.1.1",
     "css-loader": "^0.28.11",
     "d3": "^5.3.0",
     "d3-tile": "0.0.4",
@@ -14,6 +15,7 @@
     "npm-run-all": "^4.1.3",
     "react": "^16.3.2",
     "react-async-component": "^2.0.0",
+    "react-autosuggest": "^9.4.1",
     "react-dom": "^16.3.2",
     "react-i18next": "^7.11.0",
     "react-redux": "^5.0.7",
