--- a/dashboard-api/src/main/resources/application.properties
+++ b/dashboard-api/src/main/resources/application.properties
@@ -32,7 +32,7 @@ spring.jpa.hibernate.bytecode.provider=javassist
 
 spring.jpa.generate-ddl=true
 
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 
 
 ui.path=/home/sdimunzio/projects/tz-health-dashboard/dashboard-ui/build/
