--- a/dashboard-api/pom.xml
+++ b/dashboard-api/pom.xml
@@ -17,6 +17,12 @@
     <dependencies>
 
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
+
+
+        <dependency>
             <groupId>org.devgateway.geo</groupId>
             <artifactId>geo-utils</artifactId>
             <version>0.0.1-SNAPSHOT</version>
