--- a/dashboard-api/src/main/resources/application.properties
+++ b/dashboard-api/src/main/resources/application.properties
@@ -47,3 +47,5 @@ server.compression.min-response-size=2048
 server.compression.mime-types=application/json,application/xml,text/html,text/xml,text/plain
 
 
+logging.level.root=WARN
+logging.level.com.baeldung=TRACE
