--- a/dashboard-api/src/main/resources/application.properties
+++ b/dashboard-api/src/main/resources/application.properties
@@ -32,14 +32,14 @@ spring.jpa.hibernate.bytecode.provider=javassist
 
 spring.jpa.generate-ddl=true
 
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 
 
 ui.path=/home/sdimunzio/projects/tz-health-dashboard/dashboard-ui/build/
 spring.http.multipart.max-file-size=10MB
 spring.http.multipart.max-request-size=10MB
 
-logging.file=tanzania.log
+
 
 # Server compression
 server.compression.enabled=true
@@ -47,5 +47,5 @@ server.compression.min-response-size=2048
 server.compression.mime-types=application/json,application/xml,text/html,text/xml,text/plain
 
 
-logging.level.root=WARN
+logging.level.root=INFO
 logging.level.com.baeldung=TRACE
