--- a/dashboard-ui/package.json
+++ b/dashboard-ui/package.json
@@ -7,10 +7,13 @@
     "css-loader": "^0.28.11",
     "d3": "^5.3.0",
     "d3-tile": "0.0.4",
+    "dom-to-image": "^2.6.0",
+    "dom-to-image-chrome-fix": "^2.6.0",
     "history": "^4.7.2",
     "i18next": "^11.6.0",
     "i18next-browser-languagedetector": "^2.2.3",
     "immutable": "^3.8.2",
+    "jspdf": "^1.4.1",
     "node-sass-chokidar": "^1.2.2",
     "npm-run-all": "^4.1.3",
     "react": "^16.3.2",
