--- a/dashboard-api/pom.xml
+++ b/dashboard-api/pom.xml
@@ -102,7 +102,7 @@
                 <version>1.3</version>
                 <executions>
                     <execution>
-                        <id>add-source</id>
+                        <gid>add-source</gid>
                         <phase>generate-sources</phase>
                         <goals>
                             <goal>add-source</goal>
@@ -133,7 +133,7 @@
     </build>
     <repositories>
         <repository>
-            <id>boundlessgeo</id>
+            <gid>boundlessgeo</gid>
             <name>boundlessgeo</name>
             <url>http://repo.boundlessgeo.com/main/</url>
         </repository>
