--- a/dashboard-ui/package.json
+++ b/dashboard-ui/package.json
@@ -32,6 +32,7 @@
     "style-loader": "^0.21.0"
   },
   "devDependencies": {
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1"
   },
