--- a/dashboard-ui/package.json
+++ b/dashboard-ui/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/polyfill": "^7.0.0",
     "autosuggest-highlight": "^3.1.1",
     "css-loader": "^0.28.11",
     "d3": "^5.3.0",
