--- a/dashboard-api/src/main/resources/application.properties
+++ b/dashboard-api/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.datasource.password=admin
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.database-platform=org.devgateway.dialect.Dialect
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 spring.jpa.properties.hibernate.cache.use_second_level_cache=true
 spring.jpa.properties.hibernate.cache.use_query_cache=true
