--- a/dashboard-ui/package.json
+++ b/dashboard-ui/package.json
@@ -10,7 +10,6 @@
     "d3-tile": "0.0.1",
     "dom-to-image": "^2.6.0",
     "dom-to-image-chrome-fix": "^2.6.0",
-    "highcharts": "^7.0.0",
     "history": "^4.7.2",
     "i18next": "^11.6.0",
     "i18next-browser-languagedetector": "^2.2.3",
@@ -18,11 +17,13 @@
     "jspdf": "^1.4.1",
     "node-sass-chokidar": "^1.2.2",
     "npm-run-all": "^4.1.3",
+    "plotly.js": "^1.43.1",
     "react": "^16.3.2",
     "react-async-component": "^2.0.0",
     "react-autosuggest": "^9.4.1",
     "react-dom": "^16.3.2",
     "react-i18next": "^7.11.0",
+    "react-plotlyjs": "^0.4.4",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
