--- a/dashboard-api/pom.xml
+++ b/dashboard-api/pom.xml
@@ -85,6 +85,7 @@
                     <include>**/*.sql</include>
                     <include>**/*.xml</include>
                     <include>**/*.xsd</include>
+                    <include>**/*.txt</include>
                 </includes>
             </resource>
 
